Update slide navbar style.css

--- a/slide navbar style.css
+++ b/slide navbar style.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: "Jost", sans-serif;
-    background-image: url(/WallpaperDog-10941889.jpg);
+    background-image: url(WallpaperDog-10941889.jpg);
     background-size: cover;
   }
   .main {
